Fix github hosting url stuff (causes issues hosting locally)

--- a/portfolio-application/index.html
+++ b/portfolio-application/index.html
@@ -4,9 +4,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
-  <meta name="Description" content="Put your description here.">
-  <base href="/">
-
+  <meta name="Description" content="Portfolio of Samuel Frost.">
+  <base href="/portfolio/">
+  <link rel="icon" href="./favicon.ico" type="image/ico"/>
+  <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon"/>
   <style>
     html,
     body {
