Add accessibility features

--- a/portfolio-application/local_index.html
+++ b/portfolio-application/local_index.html
@@ -25,7 +25,7 @@
       box-sizing: border-box;
     }
   </style>
-  <title>portfolio-application</title>
+  <title>Samuel Frost's portfolio (local)</title>
 </head>
 
 <body>
