wip add simple approach to language

--- a/portfolio-application/local_index.html
+++ b/portfolio-application/local_index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
   <meta name="Description" content="Portfolio of Samuel Frost.">
   <base href="/">
-  <link rel="icon" href="./src/favicon.ico" type="image/ico"/>
-  <link rel="shortcut icon" href="./src/favicon.ico" type="image/x-icon"/>
+  <link rel="icon" href="/src/favicon.ico" type="image/ico"/>
+  <link rel="shortcut icon" href="/src/favicon.ico" type="image/x-icon"/>
   <style>
     html,
     body {
@@ -30,7 +30,7 @@
 
 <body>
   <portfolio-application></portfolio-application>
-  <script type="module" src="./src/portfolio-application.js"></script>
+  <script type="module" src="/src/portfolio-application.js"></script>
 </body>
 
 </html>
