--- a/portfolio-application/index.html
+++ b/portfolio-application/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
   <meta name="Description" content="Portfolio of Samuel Frost.">
-  <base href="/portfolio/">
+  <base href="/">
   <link rel="icon" href="./favicon.ico" type="image/ico"/>
   <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon"/>
   <style>
@@ -30,7 +30,7 @@
 
 <body>
   <portfolio-application></portfolio-application>
-  <script type="module" src="./src/portfolio-application.js"></script>
+  <script type="module" src="/src/portfolio-application.js"></script>
 </body>
 
 </html>
