--- a/portfolio-application/index.html
+++ b/portfolio-application/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
   <meta name="Description" content="Portfolio of Samuel Frost.">
   <base href="/">
-  <link rel="icon" href="/favicon.ico" type="image/ico"/>
+  <link rel="icon" href="/favicon.ico" type="image/ico">
   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"/>
   <style>
     html,
