Add critical path modules to index

--- a/portfolio-application/index.html
+++ b/portfolio-application/index.html
@@ -31,6 +31,8 @@
 <body>
   <portfolio-application></portfolio-application>
   <script type="module" src="/src/portfolio-application.js"></script>
+  <script type="module" src="/src/views/welcome/index.js"></script>
+  <script type="module" src="/src/locales/en-us/application.json"></script>
 </body>
 
 </html>
