Add standard service worker for now (seems to have a minor issue with version control)

--- a/portfolio-application/local_index.html
+++ b/portfolio-application/local_index.html
@@ -25,12 +25,13 @@
       box-sizing: border-box;
     }
   </style>
-  <title>Samuel Frost's portfolio (local)</title>
+  <title>no build Samuel Frost's portfolio</title>
 </head>
 
 <body>
   <portfolio-application></portfolio-application>
   <script type="module" src="/src/portfolio-application.js"></script>
+  <script>window.APP_VERSION = "0.0.1"</script>
 </body>
 
 </html>
