--- a/portfolio-application/local_index.html
+++ b/portfolio-application/local_index.html
@@ -21,7 +21,7 @@
       padding: 0;
     }
     body{
-      padding: 4px;
+      padding: min(4px, 1vmin);
       box-sizing: border-box;
     }
   </style>
