--- a/portfolio-application/local_index.html
+++ b/portfolio-application/local_index.html
@@ -31,6 +31,7 @@
 <body>
   <portfolio-application></portfolio-application>
   <script type="module" src="/src/portfolio-application.js"></script>
+  <script nomodule>alert("Use a modern browser.\n現代のブラウザーを使ってください。\n\n Using outdated compatibility software like internet explorer to browse the internet exposes you to security risks.\nIEのような古いソフトで知らないサイトにアクセスするのはセキュリティの問題です。\n\nRedirecting you to download Chrome.\n現代のブラウザーであるchromeのインストール・ページにとばします。");window.location = "https://www.google.com/chrome/"</script>
   <script>window.APP_VERSION = "0.0.1"</script>
 </body>
 
