Expand on error information

--- a/portfolio-application/src/404.html
+++ b/portfolio-application/src/404.html
@@ -8,6 +8,7 @@
 <body>
   Attempting to redirect you to the application router. <br>
   If this page does not update within a few seconds, try visiting the <a href="https://samuelfrost.github.io/portfolio/">home</a> page and navigating from there. <br>
+  This occurs because github pages does not have much room for server customizability-- forcing SPAs like this one to use a 404 page to handle non-static pages. <br>
 </body>
 </html>
 <script type="module" src="/portfolio/404.js"></script>
